[package]
name = "zero"
version = "0.1.0"
authors = ["edwin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = "2"
rand_core = "0.5.1"
sha2 = "0.8.1"
bulletproofs = "2"
merlin = "2"
arrayvec = "0.5.1"
